@@ -169,7 +169,7 @@ FutureRes sendRequest(ConnectionPool* pool, DestinationId dest, RestVerb type,
     LOG_TOPIC("36d72", DEBUG, Logger::COMMUNICATION) << "failed to send request";
   }
 
-  return futures::makeFuture(Response{std::move(std::string()), Error::Canceled, nullptr});
+  return futures::makeFuture(Response{std::string(), Error::Canceled, nullptr});
 }
 
 /// Handler class with enough information to keep retrying
@@ -421,8 +421,7 @@ FutureRes sendRequestRetry(ConnectionPool* pool, DestinationId destination,
     LOG_TOPIC("d7236", DEBUG, Logger::COMMUNICATION) << "failed to send request";
   }
 
-  return futures::makeFuture(Response{std::move(std::string()), Error::Canceled, nullptr});
-
+  return futures::makeFuture(Response{std::string(), Error::Canceled, nullptr});
 }
 
 }  // namespace network
